--- a/src/routes/app.css
+++ b/src/routes/app.css
@@ -4,6 +4,8 @@ body {
 	--bgAccent: #ebebeb;
 	--text: #0c0c0c;
 	--borders: #808080;
+	--primary: #0341fc;
+	--primaryText: #f1f1f1;
 	
 	margin: 0px;
 	padding: 0px;
